# schafkopf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
include/schafkopf/: algorithm.h  card.h  deck.h  engine.h  game.h  play.h  player.h  round.h  trick.h
source/: engine.cpp
test/: CMakeLists.txt
test/source/: engine_test.cpp  game_test.cpp  other_test.cpp
